--- a/chaffage.html
+++ b/chaffage.html
@@ -231,7 +231,7 @@
                     <a href="about-us-style-1.html"><span>A propos</span></a>
                   </li>
                   <li class="menu-item">
-                    <a href="#"><span>Solutions d'entreprises</span></a>
+                    <a ><span>Solutions d'entreprises</span></a>
                   </li>
                   <li class="menu-item">
                     <a href="our-team.html"><span>Espase Artisans</span></a>
@@ -358,14 +358,14 @@
                   <h5 class="widget_title">types d'interventions</h5> 
                   <ul>
                     <li class="cat-item">
-                      <a href="#">Entretien Chaudière</a>
+                      <a >Entretien Chaudière</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Dépannage Chauffe-Eau</a>
+                      <a >Dépannage Chauffe-Eau</a>
                     </li>
-                    <li class="cat-item"><a href="#">Installation Chaudière</a></li>
+                    <li class="cat-item"><a >Installation Chaudière</a></li>
                     <li class="cat-item">
-                      <a href="#">Installation Chauffage</a>
+                      <a >Installation Chauffage</a>
                     </li>
                    
                   </ul>
