--- a/plomberie.html
+++ b/plomberie.html
@@ -230,7 +230,7 @@
                     <a href="about-us-style-1.html"><span>A propos</span></a>
                   </li>
                   <li class="menu-item">
-                    <a href="#"><span>Solutions d'entreprises</span></a>
+                    <a ><span>Solutions d'entreprises</span></a>
                   </li>
                   <li class="menu-item">
                     <a href="our-team.html"><span>Espase Artisans</span></a>
@@ -357,14 +357,14 @@
                   <h5 class="widget_title">Type d'intervention</h5>
                   <ul>
                     <li class="cat-item">
-                      <a href="#">Fuite d'eau</a>
+                      <a>Fuite d'eau</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Débouchage Canalisation</a>
+                      <a>Débouchage Canalisation</a>
                     </li>
                     <li class="cat-item"><a href="#">Débouchage WC</a></li>
                     <li class="cat-item">
-                      <a href="#">Rénovation Salle de Bain</a>
+                      <a >Rénovation Salle de Bain</a>
                     </li>
                    
                   </ul>
