--- a/serrurerie.html
+++ b/serrurerie.html
@@ -230,7 +230,7 @@
                     <a href="about-us-style-1.html"><span>A propos</span></a>
                   </li>
                   <li class="menu-item">
-                    <a href="#"><span>Solutions d'entreprises</span></a>
+                    <a ><span>Solutions d'entreprises</span></a>
                   </li>
                   <li class="menu-item">
                     <a href="our-team.html"><span>Espase Artisans</span></a>
@@ -367,20 +367,20 @@
                   <h5 class="widget_title">Type d'intervention</h5>
                   <ul>
                     <li class="cat-item">
-                      <a href="#">Ouverture de porte</a>
+                      <a >Ouverture de porte</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Porte blindée</a>
+                      <a >Porte blindée</a>
                     </li>
                     <li class="cat-item"><a href="#">Changement De Serrure</a></li>
                     <li class="cat-item">
-                      <a href="#">Coffre fort</a>
+                      <a >Coffre fort</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Volet Roulant</a>
+                      <a >Volet Roulant</a>
                     </li>
                     <li class="cat-item">
-                        <a href="#">Rideau Métallique</a>
+                        <a>Rideau Métallique</a>
                       </li>
                   </ul>
                 </aside>
