--- a/assainissement.html
+++ b/assainissement.html
@@ -230,7 +230,7 @@
                     <a href="about-us-style-1.html"><span>A propos</span></a>
                   </li>
                   <li class="menu-item">
-                    <a href="#"><span>Solutions d'entreprises</span></a>
+                    <a ><span>Solutions d'entreprises</span></a>
                   </li>
                   <li class="menu-item">
                     <a href="our-team.html"><span>Espase Artisans</span></a>
@@ -357,10 +357,10 @@
                   <h5 class="widget_title">Type d'intervention</h5>
                   <ul>
                     <li class="cat-item">
-                      <a href="#">Débouchage Canalisation</a>
+                      <a >Débouchage Canalisation</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Vidange Fosse Septique</a>
+                      <a >Vidange Fosse Septique</a>
                     </li>
                     
                   </ul>
