--- a/traveaux.html
+++ b/traveaux.html
@@ -230,7 +230,7 @@
                     <a href="about-us-style-1.html"><span>A propos</span></a>
                   </li>
                   <li class="menu-item">
-                    <a href="#"><span>Solutions d'entreprises</span></a>
+                    <a ><span>Solutions d'entreprises</span></a>
                   </li>
                   <li class="menu-item">
                     <a href="our-team.html"><span>Espase Artisans</span></a>
@@ -357,20 +357,20 @@
                   <h5 class="widget_title">type d'intervention</h5>
                   <ul>
                     <li class="cat-item">
-                      <a href="#">Bricolage</a>
+                      <a >Bricolage</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Aménagement</a>
+                      <a >Aménagement</a>
                     </li>
                     <li class="cat-item"><a href="#">Rénovation</a></li>
                     <li class="cat-item">
-                      <a href="#">Peinture</a>
+                      <a >Peinture</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Menuiserie</a>
+                      <a >Menuiserie</a>
                     </li>
                     <li class="cat-item">
-                        <a href="#">Sols et Planchers</a>
+                        <a >Sols et Planchers</a>
                       </li>
                   </ul>
                 </aside>
