--- a/vitrerie.html
+++ b/vitrerie.html
@@ -230,7 +230,7 @@
                     <a href="about-us-style-1.html"><span>A propos</span></a>
                   </li>
                   <li class="menu-item">
-                    <a href="#"><span>Solutions d'entreprises</span></a>
+                    <a ><span>Solutions d'entreprises</span></a>
                   </li>
                   <li class="menu-item">
                     <a href="our-team.html"><span>Espase Artisans</span></a>
@@ -355,17 +355,17 @@
                   <h5 class="widget_title">Type d'intervention</h5>
                   <ul>
                     <li class="cat-item">
-                      <a href="#">Vitres</a>
+                      <a >Vitres</a>
                     </li>
                     <li class="cat-item">
-                      <a href="#">Fenétres</a>
+                      <a >Fenétres</a>
                     </li>
-                    <li class="cat-item"><a href="#">Vitrines</a></li>
+                    <li class="cat-item"><a>Vitrines</a></li>
                     <li class="cat-item">
-                      <a href="#">verandas</a>
+                      <a >verandas</a>
                     </li>
                     <li class="cat-item">
-                        <a href="#">Vitrages spéciaux</a>
+                        <a >Vitrages spéciaux</a>
                       </li>
                    
                   </ul>
